[flake8]
exclude = build,dist,docs/conf.py,*.egg-info,.eggs,.cache,.tox

[pytest]
addopts = --color=auto --cov=sshrc --cov-report=term-missing --cov-fail-under 90
norecursedirs = build dist docs *.egg-info .eggs cache .tox

[wheel]
universal = 0
python-tag = py34

[metadata]
name = sshrc
version = 0.1
description-file = README.rst
summary = Maintainable SSH config
author = Sergey Arkhipov
author-email = serge@aerialsounds.org
license = MIT
home-page = https://github.com/9seconds/sshrc
requires-python = >=3.3
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    sshrc

[extra]
mako =
    mako

jinja =
    jinja2

[entry_points]
console_scripts =
    sshrc-check=sshrc.endpoints.check:main
    sshrcd=sshrc.endpoints.sshrcd:main

[global]
setup-hooks =
    pbr.hooks.setup_hook
